# CS-739-Distributed-Systems

./: README.md
P1/: README.md  part0.c  part1.c  part1.txt
P1/part0/: part0.c
P1/part1/: branch_mispredict.c  part1  part1.c  snappy_test_tool.cc
P1/part2/: Makefile  README.md  client.c  serverbasic.c  udp.c
P1/part2/results_part1/CSL_without_drop/: 1machine.txt  2machine.txt
P1/part2/results_part1/GCP_with_drop/: readings0D.csv  readings20D.csv
P1/part3/: greeter_client.cc  greeter_server.cc  helloworld.proto
P1/part3/grpc/: greeter_client.cc  greeter_server.cc  helloworld.pb.cc  helloworld.proto
P1/part3/thrift/: average_small_message.txt  cpp_client  cpp_client_with_1  cpp_client_with_marshalling  cpp_client_with_marshalling_different_server  cpp_client_with_marshalling_opt  cpp_server  cpp_thrift_client.cpp  cpp_thrift_server.cpp  cpp_thrift_with_marshalling.cpp  cpp_thrift_with_marshalling.cpp_bkp  double_mu.txt  integer_mu.txt  mu_complex.txt  mu_strings.txt  rpc_measurement.thrift
P1/part3/thrift/gen-cpp/: CustomSvc.cpp  CustomSvc.h  CustomSvc_server.skeleton.cpp  rpc_measurement_types.cpp  rpc_measurement_types.h
P1/part3/thrift/test-results-diff-machine/: average_client_streaming_large.txt  average_small_message.txt  average_time_large_without_streaming.txt  double_mu.txt  integer_mu.txt  mu_complex.txt  mu_strings.txt  run.sh
P1/part3/thrift/test-results-opt-diff-machine/: average_client_streaming_large.txt  average_small_message.txt  average_time_large_without_streaming.txt  double_mu.txt  integer_mu.txt  mu_complex.txt  mu_strings.txt  run.sh
P1/part3/thrift/test-results-opt-same-machine/: average_client_streaming_large.txt  average_small_message.txt  average_time_large_without_streaming.txt  double_mu.txt  integer_mu.txt  mu_complex.txt  mu_strings.txt  run.sh
P1/results/part0/: 0.txt  1.txt  2.txt  3.txt
P1/results/part1/: 11.txt  12.txt  13.txt  4.txt  5.txt  6-random.txt  6-same.txt  8.txt  9.txt
P2/: README  README.md  TEAM  consistency_data.csv  log_data.csv
P2/analysis/: Untitled.ipynb  mangle-fixes.txt  max.csv  mean.csv  median.csv  min.csv  results0.csv  sd.csv
P2/example/: hello-world.txt
P2/src/: .gitignore  CMakeLists.txt  FUSE_README  afs_client.h  afs_fuse.c  afs_fuse.cc  async_afs_client.cc  async_server.cc  client.cc  client.h  filesystemcomm.proto  fuse_test  fuse_test.c  locks.cc  logtester.cc  server.cc  test.cc  timer.bash
P2/src/common/: FindFUSE.cmake  common.cmake
P2/test/: 4KB_read.bash  64B_read.bash  a.sh  client_consistency_16MB.bash  client_consistency_1GB.bash  client_consistency_256KB.bash  client_consistency_4KB.bash  client_consistency_64B.bash  clock_gettime.cpp  echo.bash  read_16MB.bash  read_1GB.bash  readtimer.c  scale_make_dir.bash  scale_scan_dir.bash  server_consistency_1GB.bash  server_consistency_256KB.bash  write_16MB.bash  write_1GB.bash  write_256KB.bash  write_4KB.bash  write_64B.bash
P2/test/consistency/: client_consistency_16MB.bash  client_consistency_256KB.bash  client_consistency_4KB.bash  client_consistency_64B.bash  consistency_16MB_client.bash  consistency_16MB_server.bash  consistency_1GB_client.bash  consistency_1GB_server.bash  consistency_256KB_client.bash  consistency_256KB_server.bash  consistency_4KB_client.bash  consistency_4KB_server.bash  consistency_64B_client.bash  consistency_64B_server.bash  server_consistency_16MB.bash  server_consistency_4KB.bash  server_consistency_64B.bash
P2/test/read-perf/: read_1GB.bash  read_256KB.bash
P2/test/scale/: scale_make.bash  scale_make_dir.bash  scale_scan_dir.bash
P2/test/write-perf/: write_1GB.bash
(+126 files in other folders)
